# GDBus

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.c
gdbus/: CMakeLists.txt  Interface.xml
includes/: client.h  gdbusCommon.h  server.h
server/: CMakeLists.txt  server.c
